# data-pipeline

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE-REVIEW.md  PORTFOLIO-COPY.md  README-DRAFT.md  README.md  dashboard.py  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: mart_daily_wellness.sql  mart_weekly_summary.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_github_commits.sql  stg_oura_activity.sql  stg_oura_sleep.sql  stg_weather_daily.sql
dbt_project/tests/: assert_activity_score_range.sql  assert_daily_date_spine_continuity.sql  assert_github_commit_not_future.sql  assert_readiness_score_range.sql  assert_sleep_duration_bounds.sql
gx/: great_expectations.yml
gx/expectations/: customers_suite.json  orders_suite.json  oura_activity_suite.json  oura_sleep_suite.json  products_suite.json  weather_daily_suite.json
pipeline_assets/: __init__.py
pipeline_assets/assets/: __init__.py  github_activity.py  oura.py  weather.py
scripts/: run_pipeline.sh  setup.sh  validate_data.py
streaming/: README.md  consumer.py  docker-compose.yml  producer.py  streaming_sensor.py
